# multi-modal-rag

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test.ipynb
rag/: embedder.py  generator.py  indexer.py  parser.py
