[project]
name = "multi-modal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-gemini>=0.4.2",
    "llama-index-embeddings-google-genai>=0.5.1",
    "llama-index-llms-gemini>=0.6.2",
    "llama-index-llms-google-genai>=0.9.5",
    "llama-index-multi-modal-llms-gemini>=0.6.1",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-faiss>=0.6.0",
    "numpy>=2.5.0",
    "pillow>=10.4.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]
